@@ -1,3 +1,6 @@
+[B]Version 1.3.1[/B]
+- Add skin setting to blur fanart backgrounds
+
 [B]Version 1.3.0[/B]
 - Add gaming support
 
@@ -6,7 +9,7 @@
 
 [B]Version 1.2.6[/B]
 - Fix List view label2
-- Fix slect dialog focus issue
+- Fix select dialog focus issue
 
 [B]Version 1.2.5[/B]
 - Fix languages
